--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,10 @@
 <ul>
-  {% for tag_key in site.sidebar_tags %}
+  <!-- {% for tag_key in site.sidebar_tags %}
     {% assign tag = site.data.tags[tag_key] %}
     <li>
       <a class="sidebar-nav-item {% if page.tag == tag_key %}active{% endif %}" href="{{ site.baseurl }}/tag/{{ tag_key }}/">{{ tag.name }}</a>
     </li>
-  {% endfor %}
+  {% endfor %} -->
 
   {% comment %}
     The code below dynamically generates a sidebar nav of pages with
